# Projeto_Livraria

./: .gitignore  Dockerfile  README.md  auto.py  db.sqlite3  docker-compose.yml  env.dev  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  github-action-demo.yml  workflow-pr.yml
bookstore_02/: settings.py  urls.py  wsgi.py
frontend/: index.css  index.html  list.html  main.js
home/: urls.py  views.py
livraria/: asgi.py  settings.py  urls.py  wsgi.py
order/: factories.py  models.py  serializers.py  urls.py  viewsets.py
order/migrations/: 0001_initial.py  0002_remove_order_product_order_product.py
order/serializers/: order_serializer.py
order/tests/: test_models.py  test_serializer.py  test_serializers.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  models.py  serializers.py  urls.py  viewsets.py
product/migrations/: 0001_initial.py  0002_product_slug.py  0002_rename_category_product_categories_and_more.py
product/models/: product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: test_models.py  test_serializer.py  test_serializers.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
