[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Erik Costa <pcerikcosta@gmail.com>"]
package-mode = true

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Django = "^5.1"
django-extensions = "^3.1.3"
djangorestframework = "^3.16"
django-debug-toolbar = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
factory-boy = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
